# rmq-rpc

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  shell.nix
.github/workflows/: ci.yml  release.yml  test.yml
examples/: client.rs  server.rs
src/: client.rs  lib.rs  reply.rs  server.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
