[package]
name = "rmq-rpc"
version = "0.1.0"
authors = ["Nikita Sivakov <sivakov512@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
lapin = "1.6"
tokio = { version = "1", features = ["full"] }
tokio-amqp = "1.0"
