[package]
name = "rmq-rpc"
version = "0.1.2"
authors = ["Nikita Sivakov <sivakov512@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Client server for RPC via RabbitMQ"
repository = "https://github.com/sivakov512/rmq-rpc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
lapin = "1.6"
tokio = { version = "1", features = ["full"] }
tokio-amqp = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
env_logger = "0.8"
log = "0.4"
test-utils = { path = "./test-utils" }
